pkg/gateway/xds/translator/testdata/out/xds-ir/http-route-rewrite-url-fullpath.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    name: first-listener/gateway_envoyproxy_io
    routes:
    - match:
        pathSeparatedPrefix: /origin
      name: rewrite-route
      route:
        cluster: rewrite-route
        regexRewrite:
          pattern:
            regex: ^/.*$
          substitution: /rewrite
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor/default/brotli:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/gzip:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/zstd:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_forward_proxy/rewrite-route:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
